fix:#146810 Determine whether the data source supports incremental types